# dynamic-yaml

./: .gitignore  .pypirc  .travis.yml  LICENSE.txt  README.md  cfg.json  cfg.py  cfg.yaml  dynamic_pyyaml.py  pyproject.toml  sample.py  setup.py  test.py
.github/workflows/: publish-to-test-pypi.yml  test-and-deploy.yml  test-dynamic-yaml.yml
dynamic_yaml/: __init__.py  yaml_wrappers.py
dynamic_yaml/test/: test_dynamic_yaml.py
tests/: test_dynamic_yaml.py  test_representations.py  test_yaml_dict.py
