[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-yaml"
version = "2.0.0"
description = "Enables self referential yaml entries"
readme = "README.md"
authors = [{ name = "Liam H. Childs", email = "liam.h.childs@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["yaml", "configuration"]
dependencies = [
    "pyyaml >= 5.4",
]
requires-python = ">=3.0"

[project.urls]
Homepage = "https://github.com/childsish/dynamic-yaml"
